# stellar-insights

./: .gitignore  BUILD_STATUS.md  CREATE_PR_ISSUE_329.md  FINAL_BUILD_VERIFICATION.md  ISSUE_329_COMPLETE.md  PR_ISSUE_329.md
.github/workflows/: security-audit.yml  security-scan.yml
backend/: .env.example  BACKGROUND_JOBS.md  CACHE_DOCUMENTATION_INDEX.md  CACHE_INTEGRATION_GUIDE.md  CACHING_IMPLEMENTATION.md  Cargo.toml  DELIVERY_SUMMARY.md  ERROR_HANDLING_VERIFIED.md  GRACEFUL_SHUTDOWN.md  GRACEFUL_SHUTDOWN_CHANGELOG.md  GRACEFUL_SHUTDOWN_COMPLETE.md  GRACEFUL_SHUTDOWN_README.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  REDIS_CACHING_SUMMARY.md  SHUTDOWN_QUICK_REFERENCE.md  SHUTDOWN_TESTING.md  STRUCTURED_ERROR_RESPONSES.md  seed_corridor_data.sql  test_graceful_shutdown.sh
backend/apm/: Cargo.toml
backend/examples/: ml_test.rs  rpc_demo.rs
backend/src/: admin_audit_log.rs  cache.rs  (+19 more)
backend/src/Sponsored Reserves Monitor/backend/: .env.example  Cargo.toml
backend/src/Sponsored Reserves Monitor/backend/src/: main.rs
backend/src/Sponsored Reserves Monitor/backend/src/api/: mod.rs  sponsorships.rs
backend/src/Sponsored Reserves Monitor/backend/src/db/: mod.rs
backend/src/Sponsored Reserves Monitor/backend/src/models/: mod.rs
backend/src/Sponsored Reserves Monitor/backend/src/services/: mod.rs  sponsorship_tracker.rs
backend/src/Sponsored Reserves Monitor/backend/tests/: sponsorship_tests.rs
docs/: RPC_DATA_SOURCES.md  RPC_INTEGRATION_SUMMARY.md  SEP24.md  SEP31.md
frontend/: NODE_VERSION_FIX.md  package-lock.json  pnpm-lock.yaml
(+121 files in other folders)
